--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,115 @@
     transform: rotate(360deg);
   }
 }
+
+input::placeholder{
+  padding-left: 5%;
+}
+
+.errorVault{
+  background-image: url("https://media.istockphoto.com/photos/open-bank-vault-3d-render-picture-id179260988?k=6&m=179260988&s=612x612&w=0&h=VL8v93wAaKctMS0S7jM_GU9_AafoE-rM8xrirWQX26U=");
+  background-repeat: no-repeat;
+  background-color: black;
+  
+  display: flex;
+  justify-content: flex-end;
+  min-height: 100vh;
+}
+
+.errorVault_text{
+  width: 50%;
+  padding: 10% 15% 0 10%;
+}
+
+.errorVault_text_heading{
+  text-align: left;
+}
+
+.devNotes {
+  position: relative;
+  height: 50rem;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-start;
+  background-image: url("https://images.unsplash.com/photo-1517842645767-c639042777db?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+
+.devNotes_text {
+  margin: 20% 0 5% 7%;
+  width: 40%;
+  z-index: 2;
+  color: white;
+}
+
+.devNotes::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.9) 50%);
+}
+
+ul{
+  list-style-type: none;
+}
+
+
+.footer_text{
+  padding: 2% 10% 1% 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.social-icons{
+  display: flex;
+  width: 30%;
+  justify-content: space-around;
+}
+
+.insta{
+  background-color: white;
+  color: #E75480;
+}
+
+.EVP_Navbar{
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: space-between;
+  padding-bottom: 1%;
+}
+
+.EVP_Navbar_logo{
+  font-size: large;
+  text-decoration: none;
+  color: black;
+  padding: 0 0 0 1%;
+}
+
+.EVP_Navbar_form{
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  padding: 0.7% 0 0 0;
+  width: 50%;
+}
+
+.EVP_Navbar_searchbar{
+  margin: 0% 4% 0 0;
+  width: 60%;
+}
+
+.EVP_Navbar_searchButton{
+  margin: 0 3% 0 0;
+}
+
+.EVP_Navbar_profile{
+  margin: 1%;
+  cursor: pointer;
+}
+
+
