--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@ ul{
 }
 
 .EVP_Navbar{
+  background-color: #212529;
   display: flex;
   flex-direction: row;
   align-items: end;
@@ -148,3 +149,109 @@ ul{
 }
 
 
+.sidebar {
+  width: 20%;
+  height: calc(100vh - 70px); /* Adjust this value to match the height of your header */
+  position: fixed;
+  top: 70px; /* Adjust this value to match the height of your header */
+  left: 0;
+  background-color: #343a40;
+  color: white;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: width 0.3s;
+}
+
+.sidebar.collapsed {
+  width: 7%;
+}
+
+.sidebar .nav-link {
+  display: flex;
+  align-items: center;
+}
+
+.sidebar.collapsed .nav-link span {
+  display: none;
+}
+
+.EVP_Navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.EVP_Navbar_logo {
+  font-size: 1.5rem;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.EVP_Navbar_form {
+  display: flex;
+  align-items: center;
+}
+
+.toggle-btn {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.errorVault_logo_link{
+  text-decoration: none;
+}
+
+.errorVault_page_body{
+  display: flex;
+  flex-direction: column;
+}
+
+.card-text-local{
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Limit to 3 lines */
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
+.card-container{
+  margin: 3% 0 0 8% ;
+  flex: 1 1 80%;
+  z-index: 0;
+}
+
+
+.card-container-flexbox{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.card-container-flexbox > div{
+  background-color: #f1f1f1;
+}
+
+.cardContainerSearchBar > input{
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  height: 3rem;
+  width: 70%;
+}
+
+.cardContainerCollapsed{
+  margin: 3% 0 0 1%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cardContainerNotCollapsed{
+  background-color: #61dafb;
+  margin: 3% 0 0 1%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
