--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,8 @@ ul{
   align-items: end;
   justify-content: space-between;
   padding-bottom: 1%;
+  position: sticky;
+  top: 0;
 }
 
 .EVP_Navbar_logo{
@@ -161,7 +163,8 @@ ul{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transition: width 0.3s;
+  transition: width 0.7s;
+  /* z-index: 0; */
 }
 
 .sidebar.collapsed {
@@ -207,32 +210,38 @@ ul{
 
 .errorVault_page_body{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* background-color: #E75480; */
+  /* z-index: 0; */
 }
 
-.card-text-local{
-  display: -webkit-box;
-  -webkit-line-clamp: 3; /* Limit to 3 lines */
-  -webkit-box-orient: vertical;  
-  overflow: hidden;
-}
 
 .card-container{
-  margin: 3% 0 0 8% ;
-  flex: 1 1 80%;
-  z-index: 0;
+  margin: 3% 1% 0 23%;
+  width: 80%;
+  transition: width 0.3s;
+  transition: margin 0.7s;
+  
+  /* z-index: 0; */
+}
+
+.card-container.collapsed{
+  width: 93%;
+  margin: 3% 0 0 10%;
 }
 
 
 .card-container-flexbox{
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  transition: all 0.7s ease;
+  /* z-index: 0; */
 }
 
-.card-container-flexbox > div{
-  background-color: #f1f1f1;
-}
+/* .card-item{
+  cursor: pointer;
+} */
 
 .cardContainerSearchBar > input{
   background-color: #f1f1f1;
@@ -241,17 +250,28 @@ ul{
   width: 70%;
 }
 
-.cardContainerCollapsed{
-  margin: 3% 0 0 1%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+
+.card-local{
+  margin: 1rem;
+  padding: 1rem;
+  background-color: lightgrey;
+  cursor: pointer;
+  transition: transform 0.7s ease;
 }
 
-.cardContainerNotCollapsed{
+.label{
   background-color: #61dafb;
-  margin: 3% 0 0 1%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  margin-right: 5px;
+  border-radius: 25px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.label a{
+  text-decoration: none;
+  color: black;
+}
+
+.create_error_button{
+  z-index: 2;
 }
