--- a/src/styles/ViewError.css
+++ b/src/styles/ViewError.css
@@ -2,14 +2,48 @@
     width: 100%;
     padding: 1rem;
     border: 1px solid grey;
+    border-radius: 1rem;
     background-color: lightgrey;
+    margin: 0 0 0.5rem 2rem;
 }
 
 .beforeFixText{
     background-color: lightgrey;
+    margin: 1rem 1rem 1rem 2rem;
     padding: 1rem;
 }
 
 .jodit-status-bar{
     visibility: hiddene;
+}
+
+h2{
+    margin: 1rem 1rem 1rem 2rem;
+}
+
+h3{
+    margin: 1rem 1rem 1rem 2rem;
+}
+
+.image-link-element{
+    width: 100%;
+    padding: 1rem;
+    border: 1px solid grey;
+    border-radius: 1rem;
+    background-color: lightgrey;
+    margin: 0.5rem 0 0.5rem 2rem;
+}
+
+.reference-link-element{
+    width: 100%;
+    padding: 1rem;
+    border: 1px solid grey;
+    border-radius: 1rem;
+    background-color: lightgrey;
+    margin: 0.5rem 0 0.5rem 2rem;
+}
+
+.reference-link{
+    text-decoration: none;
+    color: black;
 }
