--- a/src/App.css
+++ b/src/App.css
@@ -261,9 +261,9 @@ ul{
 
 .label{
   background-color: #61dafb;
-  margin-right: 5px;
-  border-radius: 25px;
-  padding: 5px;
+  margin-right: 1rem;
+  border-radius: 10%;
+  padding: 0.5rem;
   cursor: pointer;
 }
 
